// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialog/DialogFooter renders a footer with only one button 1`] = `
<footer
  className="mdc-dialog__footer"
>
  <button
    className="mdc-dialog__footer__button mdc-button"
    disabled={false}
    id={null}
    onClick={null}
    type="button"
  >
    
    I am another button
  </button>
</footer>
`;

exports[`dialog/DialogFooter renders a footer with some buttons 1`] = `
<footer
  className="mdc-dialog__footer"
>
  <button
    className="mdc-dialog__footer__button mdc-button"
    disabled={false}
    id={null}
    onClick={null}
    type="button"
  >
    
    I am another button
  </button>
  <button
    className="mdc-dialog__footer__button mdc-button"
    disabled={false}
    id={null}
    onClick={null}
    type="button"
  >
    
    I am a button
  </button>
</footer>
`;
